--- a/index.html
+++ b/index.html
@@ -13,11 +13,18 @@
 <body>
 
     <div id="app">
+
+        <p>
+            {{ array }}
+        </p>
        
  
     </div>
 
-    
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.2/axios.min.js"></script>
     <script src='https://unpkg.com/vue@3/dist/vue.global.js'></script>
     <script src="./js/script.js"></script>
 </body>
